# ProteiTestProject

./: .gitignore  CMakeLists.txt  README.md
cfg/: cfg.json  defaultCfg.json
inc/: Call.hpp  CallCenter.hpp  CallDetailedRecord.hpp  Config.hpp  Operator.hpp
src/: CallCenter.cpp  Config.cpp  Operator.cpp  performTests.cpp  test.cpp
